--- a/scss/base/_containers.scss
+++ b/scss/base/_containers.scss
@@ -1,8 +1,31 @@
 .page-container{
     width:100%;
     height: 100vh;
+    position:relative;
 }
 
 .scrollable-container{
-    overflow: scroll;
+    overflow: auto;
+}
+
+.navbar-container{
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    width: calc(100%);
+    box-shadow: rgba(26,31,51,0.60) 0 8px 20px 0;
+    border-bottom: 1px solid rgba(26,31,51,0.38);
+
+    @media (max-width: 690px) {
+        width: 100%;
+    }
+}
+
+.main-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width:100%;
+    padding: 0 36px 36px;
+    background-color: var(--main-background-color);
 }
