--- a/scss/base/_scrollbar.scss
+++ b/scss/base/_scrollbar.scss
@@ -12,4 +12,10 @@
 //Set size of scrollbar
 ::-webkit-scrollbar{
     width:7px;
+    height: 7px;
+    @media (max-width: 690px) {
+        width: 0;
+        height: 0;
+    }
 }
+
