--- a/scss/base/_settings.scss
+++ b/scss/base/_settings.scss
@@ -2,6 +2,7 @@
 
 *{
     box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
 }
 
 html{
@@ -10,4 +11,5 @@ html{
 body{
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    min-width: 350px;
 }
