--- a/scss/base/sections/_section-dataWorld.scss
+++ b/scss/base/sections/_section-dataWorld.scss
@@ -3,15 +3,47 @@
     .inline-flex-wrapper{
         margin-left: 0;
         justify-content: center;
+        width: 100%;
         .card{
             flex-basis: 0;
             flex-grow: 1;
             flex-shrink: 1;
             min-width: 200px;
-            .card-content{
+            .card-header{
+                padding: 0 24px;
+                .card-title {
+                    font-weight: 700;
+                    font-size: 1rem;
+                }
+                .card-link{
+                    height: 27px;
+                    border-radius: 14.5px;
+                    border: 2px solid #79858e;
+                    padding: 4px 15px 4px 16px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 14px;
+                    top: 0;
+                    left: 0;
+                    a{
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        text-decoration: none;
+                        color: var(--data-card-text-color);
+                        .link-arrow{
+                            font-size: 16px;
+                            padding-bottom: 3px;
+                            padding-right: 5px;
+                        }
+                    }
+                }
+            }
+            .card-content {
                 height:350px;
                 display:flex;
-                overflow: scroll;
+                overflow: auto;
                 align-items: center;
             }
         }
@@ -56,8 +88,111 @@
             font-size: 12px;
             margin: 0 20px;
         }
-        .data-card__description{
-            font-size: 12px; //<----- not working!!!! you stopped here!
+    }
+    .data-card__description{
+        font-size: 12px;
+    }
+}
+
+#gis .data-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    flex-shrink: 0;
+
+    height: 251px;
+    width:100%;
+    max-width: 185px;
+    padding: 0;
+    margin: 0 6px;
+    flex-wrap: nowrap;
+
+    border: 1px solid hsla(0,0%,100%,.18823529411764706);
+    border-radius: 10px;
+    box-shadow: 0 2px 10px -1px rgba(0,2,2,0.15);
+    text-decoration: none;
+    color: var(--data-card-text-color);
+    .data-card__header{
+        .data-card__header__title{
+            text-decoration: none;
+            font-weight: 700;
+            font-size: 1rem;
+            margin: 0 20px;
         }
     }
+    .data-card__description{
+        font-size: 12px;
+    }
+}
+
+#gov-data-base .data-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-shrink: 0;
+
+    height: 251px;
+    width:100%;
+    max-width: 185px;
+    padding: 0;
+    margin: 0 6px;
+    flex-wrap: nowrap;
+
+    border: 1px solid hsla(0,0%,100%,.18823529411764706);
+    border-radius: 10px;
+    box-shadow: 0 2px 10px -1px rgba(0,2,2,0.15);
+    text-decoration: none;
+    color: var(--data-card-text-color);
+
+    .data-card__header{
+        flex-basis: 0;
+        flex-grow: 1;
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        .data-card__header__title{
+            text-decoration: none;
+            font-weight: 700;
+            font-size: 1rem;
+            margin: 0 20px;
+        }
+    }
+    .data-card__description{
+        font-size: 12px;
+        flex-basis: 0;
+        flex-grow: 1;
+        display: flex;
+        align-items: center;
+        span{
+            margin: 0 5px;
+        }
+    }
+}
+
+#gov-data-base .card-header{
+    justify-content: space-between;
+}
+
+#gov-data-card-1 .data-card__header,
+#gov-data-card-5 .data-card__header {
+    background: rgba(0,127,127,0.05);
+    border-bottom: 1px solid rgb(0,127,127);
+}
+#gov-data-card-2 .data-card__header,
+#gov-data-card-6 .data-card__header {
+    background: rgba(53,100,204,0.05);
+    border-bottom: 1px solid rgb(53,100,204);
+}
+#gov-data-card-3 .data-card__header {
+    background: rgba(15,170,216,0.05);
+    border-bottom: 1px solid rgb(15,170,216);
+}
+#gov-data-card-4 .data-card__header {
+    background: rgba(151,119,222,0.05);
+    border-bottom: 1px solid rgb(151,119,222);
 }
