--- a/templates/partials/_analysisSection.hbs
+++ b/templates/partials/_analysisSection.hbs
@@ -11,4 +11,15 @@
             <div id="actively-ill-by-vaccination" class="chart"></div>
         </div>
     </div>
+    <div class="inline-flex-wrapper">
+        <div class="card large">
+            <div class="chart"></div>
+        </div>
+        <div class="card large">
+            <div class="chart"></div>
+        </div>
+        <div class="card large">
+            <div class="chart"></div>
+        </div>
+    </div>
 </div>
