--- a/templates/partials/_dataWorldSection.hbs
+++ b/templates/partials/_dataWorldSection.hbs
@@ -2,7 +2,9 @@
 <div class="section__content">
     <div class="inline-flex-wrapper">
         <div class="card large" id="data-reports">
-            <div class="card-title">דוחות הֲיָ-DATA</div>
+            <div class="card-header">
+                <div class="card-title">דוחות הֲיָ-DATA</div>
+            </div>
             <div class="card-content">
                 <a target="_blank" class="data-card" href="https://datadashboard.health.gov.il/COVID-19/assets/other/hayadata_report2.pdf">
                     <div class="data-card__img"><img src="/public/media/images/report_lightblue.jpg"></div>
@@ -22,16 +24,107 @@
                 </a>
             </div>
         </div>
-        <div class="card large">
-            <div class="card-title">GIS</div>
+        <div class="card large" id="gis">
+            <div class="card-header">
+                <div class="card-title">GIS</div>
+            </div>
             <div class="card-content">
-                
+                <a target="_blank" class="data-card" href="https://experience.arcgis.com/experience/23d35bf0ccbc40d1ad5b5af92b967c95">
+                    <div class="data-card__img"><img src="/public/media/images/map_sample4.jpg"></div>
+                    <div class="data-card__header">
+                        <div class="data-card__header__title">סיווגי מדינות</div>
+                    </div>
+                    <div class="data-card__description">צבעי המדינות בעולם</div>
+                </a>
+                <a target="_blank" class="data-card" href="https://experience.arcgis.com/experience/2bd444dbe59246d5a3cb7d33374b0653">
+                    <div class="data-card__img"><img src="/public/media/images/map_sample5.jpg"></div>
+                    <div class="data-card__header">
+                        <div class="data-card__header__title">בדיקות מהירות</div>
+                    </div>
+                    <div class="data-card__description">בפריסה ארצית</div>
+                </a>
+                <a target="_blank" class="data-card" href="https://experience.arcgis.com/experience/e225046d5d494417b26a0bc2aad1e370">
+                    <div class="data-card__img"><img src="/public/media/images/map_sample3.jpg"></div>
+                    <div class="data-card__header">
+                        <div class="data-card__header__title">התחסנות לקורונה</div>
+                    </div>
+                    <div class="data-card__description">לפי יישובים</div>
+                </a>
+                <a target="_blank" class="data-card" href="https://imoh.maps.arcgis.com/apps/webappviewer/index.html?id=66b5c304a3114df89ef5cfc8e8b12eb2">
+                    <div class="data-card__img"><img src="/public/media/images/map_sample2.jpg"></div>
+                    <div class="data-card__header">
+                        <div class="data-card__header__title">בידודים פעילים</div>
+                    </div>
+                    <div class="data-card__description">לפי רשות מקומית</div>
+                </a>
+                <a target="_blank" class="data-card" href="https://experience.arcgis.com/experience/21be4a670f5d4988a834b3fa6304ba1d">
+                    <div class="data-card__img"><img src="/public/media/images/map_sample1.jpg"></div>
+                    <div class="data-card__header">
+                        <div class="data-card__header__title">מפת צבע רמזור</div>
+                    </div>
+                    <div class="data-card__description">ליישובים בישראל</div>
+                </a>
             </div>
         </div>
-        <div class="card large">
-            <div class="card-title">מאגרי מידע Data Gov</div>
+        <div class="card large" id="gov-data-base">
+            <div class="card-header">
+                <div class="card-title">מאגרי מידע Data Gov</div>
+                <div class="card-link">
+                    <a href="https://data.gov.il/dataset/covid-19">
+                        <span>לאתר</span>
+                        <span class="link-arrow">&#8592;</span>
+                    </a>
+                </div>
+            </div>
             <div class="card-content">
-
+                <a target="_blank" class="data-card" id="gov-data-card-1" href="https://data.gov.il/dataset/covid-19/resource/d07c0771-01a8-43b2-96cc-c6154e7fa9bd">
+                    <div class="data-card__header">
+                        <div class="data-card__header__title">טבלת האזורים הסטטיסטיים</div>
+                    </div>
+                    <div class="data-card__description">
+                        <span>מספרי מאומתים, מחלימים, מאושפזים, נפטרים ומחוסנים ברמת היום והאזור הסטטיסטי</span>
+                    </div>
+                </a>
+                <a target="_blank" class="data-card" id="gov-data-card-2" href="https://data.gov.il/dataset/covid-19/resource/d07c0771-01a8-43b2-96cc-c6154e7fa9bd">
+                    <div class="data-card__header">
+                        <div class="data-card__header__title">טבלת אימותים לאחר חיסון</div>
+                    </div>
+                    <div class="data-card__description">
+                        <span>מספר המחוסנים שאומתו לקורונה לאחר החיסון, בקטגוריות של קבוצות גיל ועל פני זמן</span>
+                    </div>
+                </a>
+                <a target="_blank" class="data-card" id="gov-data-card-3" href="https://data.gov.il/dataset/covid-19/resource/d07c0771-01a8-43b2-96cc-c6154e7fa9bd">
+                    <div class="data-card__header">
+                        <div class="data-card__header__title">טבלת המאושפזים</div>
+                    </div>
+                    <div class="data-card__description">
+                        <span>מידע על המאושפזים בשל קורונה ברמה יומית ועל פי המצב הקליני</span>
+                    </div>
+                </a>
+                <a target="_blank" class="data-card" id="gov-data-card-4" href="https://data.gov.il/dataset/covid-19/resource/d07c0771-01a8-43b2-96cc-c6154e7fa9bd">
+                    <div class="data-card__header">
+                        <div class="data-card__header__title">טבלת גילאי המתחסנים</div>
+                    </div>
+                    <div class="data-card__description">
+                        <span>מספר המתחסנים במנה הראשונה ומנה שניה ברמת היום בקטגוריות של קבוצות גיל</span>
+                    </div>
+                </a>
+                <a target="_blank" class="data-card" id="gov-data-card-5" href="https://data.gov.il/dataset/covid-19/resource/d07c0771-01a8-43b2-96cc-c6154e7fa9bd">
+                    <div class="data-card__header">
+                        <div class="data-card__header__title">טבלת הישובים</div>
+                    </div>
+                    <div class="data-card__description">
+                        <span>נתוני מאומתים, מחלימים, נפטרים, מספר בדיקות וציוני הרמזור ברמת הישוב והיום</span>
+                    </div>
+                </a>
+                <a target="_blank" class="data-card" id="gov-data-card-6" href="https://data.gov.il/dataset/covid-19/resource/d07c0771-01a8-43b2-96cc-c6154e7fa9bd">
+                    <div class="data-card__header">
+                        <div class="data-card__header__title">טבלת האוכלוסיה הצעירה</div>
+                    </div>
+                    <div class="data-card__description">
+                        <span>מספר הבדיקות והמאומתים ברמה השבועית בקטגוריות של גיל ומחוז</span>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
